add swagger documentation for notification websocket stream for get notifications
